Issue #2034, change how images in examples are aligned

--- a/css/ccap-university-physics.css
+++ b/css/ccap-university-physics.css
@@ -4035,6 +4035,18 @@ div.book div.chapter div.figure:not(.labeled).unnumbered > .caption:not(.labeled
 div.book div.appendix div.figure:not(.labeled).unnumbered > .caption:not(.labeled)::before {
   display: none !important;
 }
+div.example > div.body > div.mediaobject {
+  text-align: center;
+}
+div.example > div.body > div.mediaobject > img {
+  display: inline-block;
+}
+div.example > div.body > div.orderedlist > ol.orderedlist > li.listitem > div.mediaobject {
+  text-align: center;
+}
+div.example > div.body > div.orderedlist > ol.orderedlist > li.listitem > div.mediaobject > img {
+  display: inline-block;
+}
 .note.equation-callout {
   padding-left: 1em;
   padding-right: 1em;
