--- a/css/refactor/uni-physics-skeleton.less
+++ b/css/refactor/uni-physics-skeleton.less
@@ -2,6 +2,23 @@
 // This software is subject to the provisions of the GNU AFFERO GENERAL PUBLIC LICENSE Version 3.0 (AGPL).
 // See LICENSE.txt for details.
 
+div.example {
+  > div.body {
+    > div.mediaobject {
+      #content>#media-object>.style(any; example);
+      > img {
+        #content>#image>.style(any; example);
+      }
+    }
+    > div.orderedlist > ol.orderedlist > li.listitem > div.mediaobject {
+      #content>#media-object>.style('list-item'; example);
+      > img {
+        #content>#image>.style('list-item'; example);
+      }
+    }
+  }
+}
+
 .note {
   &.equation-callout {
     @context: equation-callout;
