--- a/css/refactor/uni-physics-slots.less
+++ b/css/refactor/uni-physics-slots.less
@@ -74,6 +74,22 @@
   }
 }
 #content {
+  #media-object {
+    .style(any; example) {
+      text-align: center;
+    }
+    .style('list-item'; example) {
+      text-align: center;
+    }
+  }
+  #image {
+    .style(any; example) {
+      display: inline-block;
+    }
+    .style('list-item'; example) {
+      display: inline-block;
+    }
+  }
   #note {
     .style(equation-callout) {
       #content>#note>.style(problem-solving);
